<resources>
    <string name="app_name">预约</string>

    <string name="mine_order_lesson_time">约课次数</string>
    <string name="mine_lesson_time">上课次数</string>
    <string name="mine_member_score">积分</string>
    <string name="order_lesson">约课记录</string>
    <string name="comment_order">评价订单</string>
    <string name="mine_experience">体验课程</string>
    <string name="mine_card">我的会员卡</string>
    <string name="buy_card">购买会员卡</string>
    <string name="mine_card_order">购卡订单</string>
    <string name="mine_leave">我的请假</string>
    <string name="mine_history">历史记录</string>
    <string name="mine_service_protocol">服务条款</string>
    <string name="mine_setting">设置</string>
    <string name="mine_logout">退出登录</string>

    <string name="question_one">
        1. 若有以下疾病?
    </string>

    <string name="illnese">
        肠胃不佳，妇科疾病，肝功能不全，心脑血管疾病，胆结石，白血病，心肌梗塞，心绞痛，消化疾病，内分泌失调
    </string>

    <string name="question_two">
        2. 最近几个月是否有严重病史或开刀?
    </string>

    <string name="question_three">
        3. 平时饮食是否均衡，脂肪含量低，纤维含量高，吃大量的新鲜水果和蔬菜?
    </string>

    <string name="question_four">
        4. 是否有限制盐和糖的摄入量?
    </string>

    <string name="member_rule">
        1.预约时间：最早可提前<b>6天</b>，<b>6:00-22:00</b>接受预约。\n\n
        2.预约截止：开课<b>前1小时</b>。\n\n
        3.取消预约：不晚于开课<b>前2小时</b>。\n\n
        4.爽约：限制每周爽约次数<b>1次</b>，超过1次后，您的会员卡将被暂时冻结（7天）。\n\n
        5.特殊情况联系店内人员进行相应处理！\n\n
        感谢支持，祝您的工作生活美美哒！\n
    </string>

    <string name="card_rule">
        1.每一种会员卡最多拥有一张，不能重复开同一种卡。\n\n
        2.用户对会员卡的续费会添加会员卡的剩余次数。\n\n
        3.对会员卡进行的购买或充值不可以退款。\n\n
        4.不限制用户的开卡数量。\n\n
        5.关于会员卡的解释权归预约管理系统所有。 \n\n
        感谢支持，祝您的工作生活美美哒！\n
    </string>

    <string name="protocol">
        1. 会员应客观了解自身身体健康状况，老师将以此为依据指导学员学习和习练；若因您个人身体不适且上课时未向老师进行前置性告知，在习练中对无把握体式盲目习练且未待老师指导等，由此造成的习练损伤，老师及场馆将不担负相关责任。\n\n
        2. 会员应客观了解自身精神健康状况，如您因自身心理及非场馆外因，造成的情绪不稳，建议选择较为舒缓的瑜伽课程或可受益；若因您个人情绪及心理健康问题导致在习练中对老师及其他会员的语言、行为不当、过激，老师有权以礼貌的态度就您的不当行为予以合理制止，并将您劝离教室至休息区休息，以保障其他会员的上课质量及权益，客服或馆长可协助对您进行礼貌、得当的安抚或协助您联络家人。由您情绪失控造成的您个人、其他会员、老师、场馆工作人员的相关被动伤害及损失，场馆不担负相关责任，且由此造成的损失，场馆具有向您追究相关责任的权力。\n\n
        3. 请勿在会馆内吸烟，遵循瑜伽会所净味规定，请勿在馆内就餐、喧哗，保持安静。
    </string>
</resources>
